codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__ps_output_chunk_leading_whitespace_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 868
expression: rendered
---
/ps

Native agents

  • No native agents running.

exec_command terminals

  • just fix
    ↳   indented first
          more indented

Monitor jobs and watchers

  • No monitor jobs or watchers running.
