codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__ps_output_halfwidth_sound_marks_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 835
expression: rendered
---
/ps

Native agents

  • No native agents running.

exec_command terminals

  • echo ｶﾞﾊﾟｶﾞﾊﾟ [...]
    ↳ output ｶﾞﾊﾟ [...]

Monitor jobs and watchers

  • No monitor jobs or watchers running.
