codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__ps_output_long_command_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 821
expression: rendered
---
/ps

Native agents

  • No native agents running.

exec_command terminals

  • rg "foo" src --glob '**/*. [...]
    ↳ searching...

Monitor jobs and watchers

  • No monitor jobs or watchers running.
