codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__ps_output_mixed_fleet_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 689
expression: rendered
---
/ps

Native agents

  • /root/research — Ada [explorer] — running

exec_command terminals

  • cargo check --workspace
    ↳ Checking codex-tui

Monitor jobs and watchers

  • gh run watch 42
    ↳ check in progress
