codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__ps_output_multiline_long_command_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
/ps

Native agents

  • No native agents running.

exec_command terminals

  • (↵  xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx [...]

Monitor jobs and watchers

  • No monitor jobs or watchers running.
