codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__ps_output_multiline_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
/ps

Native agents

  • No native agents running.

exec_command terminals

  • echo hello↵and then some extra text
    ↳ hello
      done
  • (↵  sleep 120↵)
  • sleep 1↵sleep 120
  • rg "foo" src
    ↳ src/main.rs:12:foo

Monitor jobs and watchers

  • No monitor jobs or watchers running.
